Adds initial JUnit test.